[tool.poetry]
name = "post-qiita"
version = "0.1.0"
description = ""
authors = ["bluesDD <dd11blues@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
